--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,106 @@
-.textBlack {
-  color: black;
+:root {
+  --dark-yellow: #ffcf0d;
 }
 
 .space {
-    height: 200px;
+  height: 200px;
 }
 
+.center-flex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+/*//? DETAILS ----------------- */
+
+.black-background {
+  height: 100vh;
+  width: 100%;
+  position: absolute;
+}
+
+/*//? NAVBAR ------------------ */
+
+.navbar {
+  height: 60px;
+  background-color: rgba(33, 37, 41, 0.9) !important;
+}
+
+.genshin-logo {
+  height: 50px;
+  margin: 0;
+  padding: 0;
+}
+
+/*//? CHARACTER PAGE ---------- */
+
+.character-page {
+  height: 100vh;
+  background-image: url('./assets/Backgrounds/Monstadt-1.jpg');
+  background-position: center;
+  background-size: cover;
+  transition: background-image 1s ease-in-out;
+  overflow: hidden;
+}
+
+.fade-in {
+  animation: fade-in 1s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+}
+
+/*//? LOCATION SIDEBAR -------- */
+
+.location-sidebar::before {
+  position: absolute;
+  content: '';
+  display: block;
+  height: 93.5vh;
+  width: 2px;
+  background: rgba(255, 255, 255, 0.14);
+  box-sizing: border-box;
+}
+
+.location-sidebar {
+  height: 100%;
+}
+
+.location--active {
+  background-image: url('./assets/Other/Location-active.png');
+}
+
+.location {
+  height: 60px;
+  font-size: 22px;
+  margin-left: 19.5px;
+  background: 18px center no-repeat;
+  background-image: url('./asset/Other/Location.png');
+  background-size: 40px;
+  color: #fff;
+  box-sizing: border-box;
+}
+
+/*//? CHARACTER SLIDER -------- */
+
+.character-slider {
+  height: 200px;
+  /* background: linear-gradient(rgba(255, 255, 255, 0.5), rgba(1, 1, 1, 0.5)); */
+  position: absolute;
+  z-index: 9;
+  bottom: 0;
+  padding-top: 22px;
+  width: 100%;
+  height: 190px;
+  background: rgba(204, 204, 204, 0.2);
+}
+
+/*//? ANIMATION KEYFRAMES ----- */
+
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
