--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 }
 
 .noto-serif {
-  font-family: 'Noto Serif Telugu', serif;
+  font-family: "Noto Serif Telugu", serif;
   font-optical-sizing: auto;
   font-weight: 600;
   font-style: normal;
@@ -77,7 +77,7 @@ li {
 
 .character-page {
   height: 100vh;
-  background-image: url('./assets/Backgrounds/Monstadt-1.jpg');
+  background-image: url("./assets/Backgrounds/Monstadt-1.jpg");
   background-position: center;
   background-size: cover;
   transition: background-image 1s ease-in-out;
@@ -92,10 +92,10 @@ li {
 
 .location-sidebar::before {
   position: absolute;
-  content: '';
+  content: "";
   display: block;
   height: 100vh;
-  margin-top: -6.5vh;
+  margin-top: -60px;
   margin-left: 33.5px;
   width: 2px;
   background: rgba(255, 255, 255, 0.14);
@@ -122,20 +122,21 @@ li {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  background-image: url('./assets/Other/Location.png');
+  background-image: url("./assets/Other/Location.png");
 }
 
 .location--active {
   background: -3px center no-repeat;
-  background-image: url('./assets/Other/Location-active.png');
+  background-image: url("./assets/Other/Location-active.png");
   background-size: auto;
   padding-left: 70px;
 }
 
 /*//? CHARACTER INFO ---------- */
 
+/* Name */
 .info-div::before {
-  content: '';
+  content: "";
   background: #fed8a9;
   height: 4px;
   width: 200px;
@@ -155,6 +156,7 @@ li {
   z-index: 20;
 }
 
+/* VA */
 .va-info-row {
   padding-left: 12px;
 }
@@ -169,6 +171,77 @@ li {
   padding-bottom: 2px;
 }
 
+/* Toggle JP-EN */
+
+/* The switch - the box around the slider */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 80px;
+  height: 37px;
+  z-index: 20;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  border: 2px solid rgba(158, 158, 158, 0.5);
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "JP";
+  display: flex;
+  justify-content: center;
+  height: 25px;
+  width: 25px;
+  left: 4px;
+  bottom: 4px;
+  background-color: var(--light-brown);
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+/* input:checked + .slider {
+  background-color: #2196F3;
+} */
+
+/* input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+} */
+
+input:checked + .slider:before {
+  content: "EN";
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(43px);
+  transform: translateX(43px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+/* Infobox */
 .infobox {
   background-color: rgba(0, 0, 0, 0.5);
   max-width: 540px;
@@ -179,7 +252,7 @@ li {
 
 .infobox::before {
   display: block;
-  content: '';
+  content: "";
   width: 20px;
   height: 20px;
   margin-right: 20px;
@@ -204,7 +277,7 @@ li {
 
 .character-fullart {
   height: 100vh;
-  margin-top: -6.5vh;
+  margin-top: -60px;
   z-index: 7;
   position: absolute;
 }
@@ -226,11 +299,11 @@ li {
   bottom: 0;
   left: calc(50% - 79vh);
   display: block;
-  content: '';
+  content: "";
   width: 155vh;
   height: 52vh;
   background-size: 155vh 52vh;
-  background: url('./assets/Other/light.f43c391.png') center no-repeat;
+  background: url("./assets/Other/light.f43c391.png") center no-repeat;
 }
 
 .slider-button {
