--- a/src/index.css
+++ b/src/index.css
@@ -77,7 +77,7 @@ li {
 
 .character-page {
   height: 100vh;
-  background-image: url("./assets/Backgrounds/Monstadt-1.jpg");
+  background-image: url("./assets/backgrounds/Monstadt-1.jpg");
   background-position: center;
   background-size: cover;
   transition: background-image 1s ease-in-out;
@@ -121,12 +121,12 @@ li {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  background-image: url("./assets/Other/Location.png");
+  background-image: url("./assets/other/Location.png");
 }
 
 .location--active {
   background: -3px center no-repeat;
-  background-image: url("./assets/Other/Location-active.png");
+  background-image: url("./assets/other/Location-active.png");
   background-size: auto;
   padding-left: 70px;
 }
@@ -257,7 +257,9 @@ input:checked + .slider:before {
   margin-right: 20px;
   margin-top: 5px;
   background-size: 20px;
-  background: url(./assets/Other/Text-before.png);
+  background: url("./assets/other/Text-before.png");
+  position: absolute;
+
 }
 
 .infobox-inside {
@@ -266,7 +268,7 @@ input:checked + .slider:before {
   overflow-y: auto;
   overflow-x: hidden;
   margin-left: 0;
-  padding-left: 0;
+  padding-left: 36px;
 }
 
 .info-text {
@@ -302,7 +304,7 @@ input:checked + .slider:before {
   width: 155vh;
   height: 52vh;
   background-size: 155vh 52vh;
-  background: url("./assets/Other/light.f43c391.png") center no-repeat;
+  background: url("./assets/other/light.f43c391.png") center no-repeat;
 }
 
 .slider-button {
