--- a/src/index.css
+++ b/src/index.css
@@ -113,6 +113,7 @@ li {
   line-height: 54px;
   font-size: 20px;
   color: #fff;
+  text-decoration: none;
   text-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
   padding-left: 56px;
   background: 15px center no-repeat;
@@ -122,6 +123,8 @@ li {
   -ms-user-select: none;
   user-select: none;
   background-image: url("./assets/other/Location.png");
+  z-index: 999;
+
 }
 
 .location--active {
@@ -129,6 +132,7 @@ li {
   background-image: url("./assets/other/Location-active.png");
   background-size: auto;
   padding-left: 70px;
+  z-index: 999;
 }
 
 /*//? CHARACTER INFO ---------- */
